FIPS-10097/FIPS-12204 :: refactor code
Change-Id: Ie17da78f8ea1e76957794b9bafa3b79530418301